Fixed layout issues and updated content

--- a/static/css/base.css
+++ b/static/css/base.css
@@ -1,23 +1,37 @@
+html {
+  position: relative;
+  min-height: 100%;
+}
 .rbody{
+  
   margin:0;
    padding:0;
   min-height: 100%;
-  /*
-  background-image: url("../img/analysis-blackboard.jpg");
-  */
   background-color: black;
   background-size: cover;
-
 }
-.footer{
-  font-size: 0.7em;
+.rr{
+  color:  #41FF00;
 }
-
+#wrap{
+  font-family: 'Play', sans-serif;
+	margin-bottom: 15%;
+}
+#footer{
+    color: white;
+  	position: absolute;
+	 text-align: center;
+	 width: 100%;
+	 bottom: 0;
+}
+#footer a{
+  
+  color:  #41FF00;
+}
 .titles{
   color: white;
   
 }
-
 .tiny-con{
   padding: 10px;
   
